# kinetic-drifting

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
kdrifting/: __init__.py  certify.py  checkpointing.py  cli.py  config.py  distributed.py  env.py  export.py  features.py  hf.py  inference.py  jax_artifacts.py  logging.py  losses.py  memory_bank.py  model_builder.py  schedules.py
kdrifting/data/: __init__.py  imagenet.py  latent.py  vae.py
kdrifting/eval/: __init__.py  fid.py  generation.py  inception.py  precision_recall.py  resize.py
kdrifting/models/: __init__.py  common.py  convnext.py  generator.py  mae.py
kdrifting/runners/: __init__.py  common.py  generator.py  mae.py
kdrifting/training/: generator.py  mae.py  state.py
reports/2026-03-26-single-machine/: single_machine_certification.json  single_machine_certification.md
tests/unit/: test_certify.py  test_checkpointing.py  test_cli.py  test_config.py  test_convnext.py  test_data_pipeline.py  test_eval.py  test_export.py  test_generator.py  test_hf.py  test_inference.py  test_jax_artifacts.py  test_logging.py  test_losses.py  test_mae.py  test_memory_bank.py  test_package.py  test_runners.py  test_schedules.py  test_training_steps.py
